# gapi/converter.go
@@ -26,3 +26,31 @@ func convertUser(user db.User) *pb.User {
 		CreatedAt:         createdAt,
 	}
 }
+func convertAccount(account db.Account) *pb.Account {
+	return &pb.Account{
+		Id:        account.ID,
+		Owner:     account.Owner,
+		Balance:   account.Balance,
+		Currency:  account.Currency,
+		CreatedAt: timestamppb.New(account.CreatedAt.Time),
+	}
+}
+
+func convertTransfer(transfer db.Transfer) *pb.Transfer {
+	return &pb.Transfer{
+		Id:            transfer.ID,
+		FromAccountId: transfer.FromAccountID,
+		ToAccountId:   transfer.ToAccountID,
+		Amount:        transfer.Amount,
+		CreatedAt:     timestamppb.New(transfer.CreatedAt.Time),
+	}
+}
+
+func convertEntry(entry db.Entry) *pb.Entry {
+	return &pb.Entry{
+		Id:         entry.ID,
+		AccountId:  entry.AccountID,
+		Amount:     entry.Amount,
+		CreatedAt:  timestamppb.New(entry.CreatedAt.Time),
+	}
+}
